--- a/webModule/src/main/webapp/index.html
+++ b/webModule/src/main/webapp/index.html
@@ -4,17 +4,20 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Contacts List</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.0/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch,Promise"></script>
     <script type="text/javascript" src="js/utility.js"></script>
     <script type="text/javascript" src="js/mainForm.js"></script>
     <script type="text/javascript" src="js/createForm.js"></script>
     <script type="text/javascript" src="js/showFullContactInfo.js"></script>
     <script type="text/javascript" src="js/deleting.js"></script>
+    <script type="text/javascript" src="js/editForm.js"></script>
     <style>
         @import "css/header.css";
         @import "css/footer.css";
         @import "css/mainForm.css";
         @import "css/createForm.css";
+        @import "css/editForm.css";
         body {
             margin: 0;
         }
@@ -27,9 +30,8 @@
     </div>
     <div id="mainForm">
         <table id="mainTable" style="border:1px solid black"><tbody>
-        <script type="text/html-template" id="dynamicMainTable">
+        <script type="text/template" id="dynamicMainTable">
                 <tr>
-                    <th></th>
                     <th>Name</th>
                     <th>Birth Date</th>
                     <th>Address</th>
@@ -37,9 +39,8 @@
                 </tr>
                 {{#.}}
                 <tr>
-                    <td hidden>{{id}}</td>
-                    <td><input type="checkbox"></td>
-                    <td><a onclick="showFullContactInfoForm({{id}});">{{firstName}} {{surname}} {{patronymic}}</a></td>
+                    <td><input type="checkbox" value={{id}}><a onclick="showFullContactInfoForm({{id}});">  {{firstName}} {{surname}}
+                                {{patronymic}}</a></td>
                     <td>{{birthDate}}</td>
                     <td>{{address.country}}, {{address.locality}}, {{address.street}}, {{address.house}},
                         {{address.apartment}}, {{address.postcode}}</td>
@@ -131,7 +132,7 @@
     </div>
     <div id="fullContactInfoForm">
         <class id="contact">
-            <script type="text/html-template" id="dynamicContact">
+            <script type="text/template" id="dynamicContact">
                 <p>First Name: {{firstName}}</p>
                 <p>Surname: {{surname}}</p>
                 <p>Patronymic: {{patronymic}}</p>
@@ -148,8 +149,87 @@
                 <p>House: {{address.house}}</p>
                 <p>Apartment: {{address.apartment}}</p>
                 <p>Postcode: {{address.postcode}}</p>
+                <button onclick="showEditForm({{id}});">Edit this contact</button>
                 <button onclick="deleteContact({{id}});">Delete this contact</button>
                 <button onclick="showAllContacts()">Cancel</button>
+            </script>
+        </class>
+    </div>
+    <div id="editForm">
+        <class id="editor">
+            <script type="text/template" id="dynamicContactEditor">
+            <li>
+                <label for="firstName">First Name</label>
+                <input type="text" id="editFirstName"  value={{firstName}}>
+            </li>
+            <li>
+                <label for="surname">Surname</label>
+                <input type="text" id="editSurname" value={{surname}}>
+            </li>
+            <li>
+                <label for="patronymic">Patronymic</label>
+                <input type="text" id="editPatronymic" value={{patronymic}}>
+            </li>
+            <li>
+                <label for="birthDate">Birth date</label>
+                <input type="date" id="editBirthDate" value={{birthDate}}>
+            </li>
+            <li>
+                <label>Sex</label>
+                <p><input type="radio" id="editMale" onclick="radioEdit('male');">Male</p>
+                <p><input type="radio" id="editFemale" onclick="radioEdit('female');">Female</p>
+            </li>
+            <li>
+                <label for="nationality">Nationality</label>
+                <input type="text" id="editNationality" value={{nationality}}>
+            </li>
+            <li>
+                <label>Family status</label>
+                <p><input type="radio" id="editSingle" onclick="familyStatusEdit('single');">Single</p>
+                <p><input type="radio" id="editDivorced" onclick="familyStatusEdit('divorced');">Divorced</p>
+                <p><input type="radio" id="editMarried" onclick="familyStatusEdit('married');">Married</p>
+            </li>
+            <li>
+                <label for="website">Website</label>
+                <input type="url" id="editWebsite" value={{website}}>
+            </li>
+            <li>
+                <label for="email">E-mail</label>
+                <input type="email" id="editEmail" value={{email}}>
+            </li>
+            <li>
+                <label for="currentWorkplace">Current workplace</label>
+                <input type="text" id="editCurrentWorkplace" value={{currentWorkplace}}>
+            </li>
+            <li>
+                <label for="country">Country</label>
+                <input type="text" id="editCountry" value={{address.country}}>
+            </li>
+            <li>
+                <label for="locality">Locality</label>
+                <input type="text" id="editLocality" value={{address.locality}}>
+            </li>
+            <li>
+                <label for="street">Street</label>
+                <input type="text" id="editStreet" value={{address.street}}>
+            </li>
+            <li>
+                <label for="house">House</label>
+                <input type="text" id="editHouse" value={{address.house}}>
+            </li>
+            <li>
+                <label for="apartment">Apartment</label>
+                <input type="text" id="editApartment" value={{address.apartment}}>
+            </li>
+            <li>
+                <label for="postcode">Postcode</label>
+                <input type="text" id="editPostcode" value={{address.postcode}}>
+            </li>
+            <li>
+                <button type="submit" onclick="editContact({{id}});">Submit</button>
+                <button type="reset">Reset</button>
+                <button onclick="showAllContacts()">Cancel</button>
+            </li>
             </script>
         </class>
     </div>
