--- a/webModule/src/main/webapp/index.html
+++ b/webModule/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/editForm.js"></script>
     <script type="text/javascript" src="js/attachForm.js"></script>
     <script type="text/javascript" src="js/emailForm.js"></script>
+    <script type="text/javascript" src="js/editAttachForm.js"></script>
     <style>
         @import "css/header.css";
         @import "css/footer.css";
@@ -270,6 +271,7 @@
                     <td>{{lastUpdate}}</td>
                     <td>
                         <div id="atttachImages">
+                            <img src="/contactsList/images/edit.png" alt="edit" onclick="showEditAttachForm({{id}});"/>
                             <img src="/contactsList/images/download.png" alt="download" onclick="downloadAttach({{id}});"/>
                             <img src="/contactsList/images/delete.png" alt="delete" onclick="deleteAttach({{id}});"/>
                         </div>
@@ -322,6 +324,25 @@
                 <button class="button" type="reset">Reset</button>
                 <button class="button" type="reset" onclick="showAllContacts()">Cancel</button>
             </p>
+        </div>
+        <div id="editAttachForm">
+            <script type="text/template" id="dynamicAttachEditor">
+                <p id="hiddenId" hidden>{{id}}</p>
+                <p id="hiddenUserId" hidden>{{userId}}</p>
+                <p id="hiddenFileType" hidden>{{type}}</p>
+                <p><label for="editAttachTitle">File title</label>
+                    <input type="text" id="editAttachTitle" value={{title}}></p>
+                <p><label for="attachComment">Comment
+                    <textarea id="attachComment">{{comment}}</textarea>
+                </label>
+                </p>
+                <p>
+                    <button class="button" onclick="editAttach({{id}});">Submit</button>
+                    <button class="button" type="reset">Reset</button>
+                    <button class="button" onclick="showAllAttachments({{userId}});">Cancel</button>
+                </p>
+            </script>
+            <div id="attachEditor"></div>
         </div>
     </div>
     <div class="footer">
